--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=Carsten.Koehler_easybuggy_AX8s5ptu3gAv_Ty8sugM
+sonar.projectKey=org.t246osslab.easybuggy:easybuggy
 
 # --- optional properties ---
 
